--- a/capstone/package.json
+++ b/capstone/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^5.12.2",
+    "@uiw/react-markdown-preview": "^5.1.5",
+    "@uiw/react-md-editor": "^4.0.8",
     "bcryptjs": "^2.4.3",
     "date-fns": "^3.0.6",
     "jsonwebtoken": "^9.0.2",
@@ -26,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^9.1.0",
     "react-syntax-highlighter": "^16.1.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "zod": "^3.22.4"
   },
